--- a/CaseRunner/MainWindow.xaml
+++ b/CaseRunner/MainWindow.xaml
@@ -10,15 +10,18 @@
     <Window.Resources>
         <cv:ProcessConverter x:Key="ProcessConverter"/>
         <cv:BoolReverseConverter x:Key="BoolReverseConverter"/>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="Margin" Value="5,5"/>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <ListView x:Name="lv_Items" ItemsSource="{Binding}" IsEnabled="False">
@@ -43,7 +46,7 @@
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
@@ -56,7 +59,20 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>-->
             <!--<Button Grid.Row="1" x:Name="btn_Load" Content="Load Case" Click="btn_Load_Click"/>-->
-            <Button Grid.Row="1" Grid.RowSpan="2" x:Name="btn_Run" Content="Run!" Click="btn_Run_Click"/>
+
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <Button x:Name="btn_MasterData" Content="Please input the master data here" Click="btn_MasterData_Click"/>
+                <Button x:Name="btn_GLAccount" Content="Please input the GL Account list here" Grid.Row="1" Click="btn_GLAccount_Click"/>
+                <Button x:Name="btn_Report" Content="Get Report file here" Grid.Row="2" Click="btn_Report_Click"/>
+            </Grid>
+            
+            <Button Grid.Row="2"  x:Name="btn_Run" Content="Run!" Click="btn_Run_Click"/>
         </Grid>
 
         <Grid Grid.ColumnSpan="2" Grid.Row="1">
